# docs/swagger.yaml
@@ -174,6 +174,62 @@ paths:
       summary: register
       tags:
       - auth
+  /user/:
+    get:
+      description: get profile info
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http_errors.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/http_errors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http_errors.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: profile info
+      tags:
+      - user
+  /user/all:
+    get:
+      description: get all profile info
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http_errors.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/http_errors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http_errors.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: all profile info
+      tags:
+      - user
 securityDefinitions:
   ApiKeyAuth:
     in: header
